# in_memory_table

./: .gitignore  README.rst  flake.nix  package.nix  pyproject.toml  relational.py  run-checks  setup.cfg  setup.py  tests.py
.github/workflows/: publish-to-pypi.yml  python-app.yml
in_memory_relations/: __init__.py  column_index.py  ordered_set.py  table.py  test_database.py  timings.py
in_memory_table/: __init__.py  column_index.py  table.py
tests/: test_database.py  test_sorted_collection.py  test_table.py  timings.py
