[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "in_memory_relations"
version = "0.1"
description = "In memory indexed data"
authors = [
    { name = "Sebastian Jordan", email = "sebastian.jordan.mail@googlemail.com"},
]

[tool.setuptools]
packages = [ "in_memory_relations" ]

[project.scripts]
tests-database = "in_memory_relations.timings:main"


[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
files = [
    "in_memory_relations"
]
