[build-system]
requires = ["setuptools", "mypy"]
build-backend = "setuptools.build_meta"

[project]
name = "in_memory_table"
version = "0.1"
description = "In memory indexed data"
authors = [
    { name = "Sebastian Jordan", email = "sebastian.jordan.mail@googlemail.com"},
]
readme = "README.rst"

[project.license]
text = "GPL-3.0-or-later"

[tool.setuptools]
packages = [ "in_memory_table" ]

[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
files = [
    "in_memory_table", "tests"
]
